src/legalizer/riscv/tests/snapshots/cdec__legalizer__riscv__tests__bitint__bit_op.snap
---
source: src/legalizer/riscv/tests/bitint.rs
expression: codegen.to_string()
---
    .global main
    .section .text
main:
    prologue:
        sd ra, -8(sp)
        sd sp, -16(sp)
        sd fp, -24(sp)
        mv fp, sp
        add sp, sp, -160
    entry:
        ld t1, -56(fp)
        ld t0, -72(fp)
        and t2, t1, t0
        ld t1, -88(fp)
        ld t0, -104(fp)
        xor t0, t1, t0
        or t0, t2, t0
        sd t0, -136(fp)
        ld t2, -48(fp)
        srl t2, t2, 0
        li t0, 68719476735
        and t2, t2, t0
        sll t2, t2, 56
        srl t2, t2, 56
        ld t1, -64(fp)
        srl t1, t1, 0
        li t0, 68719476735
        and t1, t1, t0
        sll t1, t1, 56
        srl t1, t1, 56
        and t3, t2, t1
        ld t2, -80(fp)
        srl t2, t2, 0
        li t0, 68719476735
        and t2, t2, t0
        sll t2, t2, 56
        srl t2, t2, 56
        ld t1, -96(fp)
        srl t1, t1, 0
        li t0, 68719476735
        and t1, t1, t0
        sll t1, t1, 56
        srl t1, t1, 56
        xor t0, t2, t1
        or t2, t3, t0
        ld t1, -128(fp)
        li t0, -68719476736
        and t1, t1, t0
        li t0, 68719476735
        and t2, t2, t0
        sll t2, t2, 0
        or t2, t2, t1
        sd t2, -128(fp)
        add t0, fp, -136
        mv a0, t0
        add t0, fp, -40
        mv a1, t0
        li a2, 16
        call memcpy
        ld t0, -120(fp)
        not t0, t0
        sd t0, -152(fp)
        ld t1, -112(fp)
        srl t1, t1, 0
        li t0, 68719476735
        and t1, t1, t0
        sll t1, t1, 56
        srl t1, t1, 56
        not t2, t1
        ld t1, -144(fp)
        li t0, -68719476736
        and t1, t1, t0
        li t0, 68719476735
        and t2, t2, t0
        sll t2, t2, 0
        or t2, t2, t1
        sd t2, -144(fp)
        add t0, fp, -152
        mv a0, t0
        add t0, fp, -40
        mv a1, t0
        li a2, 16
        call memcpy
        li a0, 0
        ld ra, -8(fp)
        ld sp, -16(fp)
        ld fp, -24(fp)
        ret 
    .section .data
