src/legalizer/riscv/tests/snapshots/cdec__legalizer__riscv__tests__bitint__compare.snap
---
source: src/legalizer/riscv/tests/bitint.rs
expression: codegen.to_string()
---
    .global main
    .global __bitint_gt_signed_100
    .global __bitint_lt_signed_100
    .section .text
__bitint_lt_signed_100:
    prologue3:
        sd ra, -8(sp)
        sd sp, -16(sp)
        sd fp, -24(sp)
        mv fp, sp
        add sp, sp, -80
    entry3:
        sd a0, -40(fp)
        sd a1, -32(fp)
        sd a2, -56(fp)
        sd a3, -48(fp)
        li t0, 1
        sb t0, -64(fp)
        ld t1, -40(fp)
        ld t0, -56(fp)
        sltu t0, t1, t0
        seqz t0, t0
        beqz t0, if_else6
    if_then6:
        li t0, 0
        sb t0, -64(fp)
        j finished2
        j if_merge6
    if_else6:
    if_merge6:
        ld t2, -32(fp)
        srl t2, t2, 0
        li t0, 68719476735
        and t2, t2, t0
        sll t2, t2, 56
        srl t2, t2, 56
        ld t1, -48(fp)
        srl t1, t1, 0
        li t0, 68719476735
        and t1, t1, t0
        sll t1, t1, 56
        srl t1, t1, 56
        sltu t0, t2, t1
        seqz t0, t0
        beqz t0, if_else7
    if_then7:
        li t0, 0
        sb t0, -64(fp)
        j finished2
        j if_merge7
    if_else7:
    if_merge7:
    finished2:
        ld t1, -32(fp)
        srl t1, t1, 0
        li t0, 68719476735
        and t1, t1, t0
        sll t1, t1, 56
        srl t1, t1, 56
        srl t0, t1, 35
        and t0, t0, 1
        sd t0, -72(fp)
        ld t1, -48(fp)
        srl t1, t1, 0
        li t0, 68719476735
        and t1, t1, t0
        sll t1, t1, 56
        srl t1, t1, 56
        srl t0, t1, 35
        and t0, t0, 1
        sd t0, -80(fp)
        ld t0, -72(fp)
        and t1, t0, 15
        li t0, 0
        sub t0, t1, t0
        seqz t0, t0
        snez t0, t0
        beqz t0, and_merge5
    and_right5:
        ld t0, -80(fp)
        and t1, t0, 15
        li t0, 1
        sub t0, t1, t0
        seqz t0, t0
        snez t0, t0
        j and_merge5
    and_merge5:
        beqz t0, if_else8
    if_then8:
        li t0, 0
        sb t0, -64(fp)
        j if_merge8
    if_else8:
        ld t0, -72(fp)
        and t1, t0, 15
        li t0, 1
        sub t0, t1, t0
        seqz t0, t0
        snez t0, t0
        beqz t0, and_merge6
    and_right6:
        ld t0, -80(fp)
        and t1, t0, 15
        li t0, 0
        sub t0, t1, t0
        seqz t0, t0
        snez t0, t0
        j and_merge6
    and_merge6:
        beqz t0, if_else9
    if_then9:
        li t0, 1
        sb t0, -64(fp)
        j if_merge9
    if_else9:
        ld t0, -72(fp)
        and t1, t0, 15
        li t0, 1
        sub t0, t1, t0
        seqz t0, t0
        snez t0, t0
        beqz t0, and_merge7
    and_right7:
        ld t0, -80(fp)
        and t1, t0, 15
        li t0, 1
        sub t0, t1, t0
        seqz t0, t0
        snez t0, t0
        j and_merge7
    and_merge7:
        beqz t0, if_else10
    if_then10:
        lbu t0, -64(fp)
        seqz t0, t0
        sb t0, -64(fp)
        j if_merge10
    if_else10:
    if_merge10:
    if_merge9:
    if_merge8:
        lbu t0, -64(fp)
        mv a0, t0
        ld ra, -8(fp)
        ld sp, -16(fp)
        ld fp, -24(fp)
        ret 
        li a0, 0
        ld ra, -8(fp)
        ld sp, -16(fp)
        ld fp, -24(fp)
        ret 
__bitint_gt_signed_100:
    prologue2:
        sd ra, -8(sp)
        sd sp, -16(sp)
        sd fp, -24(sp)
        mv fp, sp
        add sp, sp, -80
    entry2:
        sd a0, -40(fp)
        sd a1, -32(fp)
        sd a2, -56(fp)
        sd a3, -48(fp)
        li t0, 1
        sb t0, -64(fp)
        ld t1, -40(fp)
        ld t0, -56(fp)
        sub t0, t1, t0
        sgtz t0, t0
        seqz t0, t0
        beqz t0, if_else
    if_then:
        li t0, 0
        sb t0, -64(fp)
        j finished
        j if_merge
    if_else:
    if_merge:
        ld t2, -32(fp)
        srl t2, t2, 0
        li t0, 68719476735
        and t2, t2, t0
        sll t2, t2, 56
        srl t2, t2, 56
        ld t1, -48(fp)
        srl t1, t1, 0
        li t0, 68719476735
        and t1, t1, t0
        sll t1, t1, 56
        srl t1, t1, 56
        sub t0, t2, t1
        sgtz t0, t0
        seqz t0, t0
        beqz t0, if_else2
    if_then2:
        li t0, 0
        sb t0, -64(fp)
        j finished
        j if_merge2
    if_else2:
    if_merge2:
    finished:
        ld t1, -32(fp)
        srl t1, t1, 0
        li t0, 68719476735
        and t1, t1, t0
        sll t1, t1, 56
        srl t1, t1, 56
        srl t0, t1, 35
        and t0, t0, 1
        sd t0, -72(fp)
        ld t1, -48(fp)
        srl t1, t1, 0
        li t0, 68719476735
        and t1, t1, t0
        sll t1, t1, 56
        srl t1, t1, 56
        srl t0, t1, 35
        and t0, t0, 1
        sd t0, -80(fp)
        ld t0, -72(fp)
        and t1, t0, 15
        li t0, 0
        sub t0, t1, t0
        seqz t0, t0
        snez t0, t0
        beqz t0, and_merge2
    and_right2:
        ld t0, -80(fp)
        and t1, t0, 15
        li t0, 1
        sub t0, t1, t0
        seqz t0, t0
        snez t0, t0
        j and_merge2
    and_merge2:
        beqz t0, if_else3
    if_then3:
        li t0, 1
        sb t0, -64(fp)
        j if_merge3
    if_else3:
        ld t0, -72(fp)
        and t1, t0, 15
        li t0, 1
        sub t0, t1, t0
        seqz t0, t0
        snez t0, t0
        beqz t0, and_merge3
    and_right3:
        ld t0, -80(fp)
        and t1, t0, 15
        li t0, 0
        sub t0, t1, t0
        seqz t0, t0
        snez t0, t0
        j and_merge3
    and_merge3:
        beqz t0, if_else4
    if_then4:
        li t0, 0
        sb t0, -64(fp)
        j if_merge4
    if_else4:
        ld t0, -72(fp)
        and t1, t0, 15
        li t0, 1
        sub t0, t1, t0
        seqz t0, t0
        snez t0, t0
        beqz t0, and_merge4
    and_right4:
        ld t0, -80(fp)
        and t1, t0, 15
        li t0, 1
        sub t0, t1, t0
        seqz t0, t0
        snez t0, t0
        j and_merge4
    and_merge4:
        beqz t0, if_else5
    if_then5:
        lbu t0, -64(fp)
        seqz t0, t0
        sb t0, -64(fp)
        j if_merge5
    if_else5:
    if_merge5:
    if_merge4:
    if_merge3:
        lbu t0, -64(fp)
        mv a0, t0
        ld ra, -8(fp)
        ld sp, -16(fp)
        ld fp, -24(fp)
        ret 
        li a0, 0
        ld ra, -8(fp)
        ld sp, -16(fp)
        ld fp, -24(fp)
        ret 
main:
    prologue:
        sd ra, -8(sp)
        sd sp, -16(sp)
        sd fp, -24(sp)
        mv fp, sp
        add sp, sp, -128
    entry:
        ld a0, -48(fp)
        ld a1, -40(fp)
        ld a2, -64(fp)
        ld a3, -56(fp)
        call __bitint_gt_signed_100
        mv t0, a0
        sb t0, -32(fp)
        ld a0, -80(fp)
        ld a1, -72(fp)
        ld a2, -96(fp)
        ld a3, -88(fp)
        call __bitint_lt_signed_100
        mv t0, a0
        sb t0, -32(fp)
        ld t1, -112(fp)
        ld t0, -128(fp)
        sub t0, t1, t0
        seqz t0, t0
        snez t0, t0
        beqz t0, and_merge
    and_right:
        ld t2, -104(fp)
        srl t2, t2, 0
        li t0, 68719476735
        and t2, t2, t0
        sll t2, t2, 56
        srl t2, t2, 56
        ld t1, -120(fp)
        srl t1, t1, 0
        li t0, 68719476735
        and t1, t1, t0
        sll t1, t1, 56
        srl t1, t1, 56
        sub t0, t2, t1
        seqz t0, t0
        snez t0, t0
        j and_merge
    and_merge:
        sb t0, -32(fp)
        li a0, 0
        ld ra, -8(fp)
        ld sp, -16(fp)
        ld fp, -24(fp)
        ret 
    .section .data
